Remove unused lynkless-enhanced.html and update references
- Delete basic version without WebRTC
- Keep only the full-featured index.html with WebRTC
- Update README and test.html to point to live version
- Clean up repository structure

--- a/test.html
+++ b/test.html
@@ -46,8 +46,8 @@
     
     <div class="test-section">
         <h2>🔗 Quick Links</h2>
-        <button class="test-button" onclick="window.open('index.html', '_blank')">Open Main App</button>
-        <button class="test-button" onclick="window.open('lynkless-enhanced.html', '_blank')">Open Enhanced App</button>
+        <button class="test-button" onclick="window.open('index.html', '_blank')">Open Main App (WebRTC)</button>
+        <button class="test-button" onclick="window.open('https://sathvik-nagesh.github.io/lynkless/', '_blank')">Open Live Version</button>
     </div>
 
     <div class="test-section">
